--- a/3_Solution/Bomber/Bomber/Bomber.vcxproj
+++ b/3_Solution/Bomber/Bomber/Bomber.vcxproj
@@ -125,10 +125,12 @@
   <ItemGroup>
     <ClCompile Include="Interface.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Interface.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="Server.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
