--- a/3_Solution/Bomber/Backend/Backend.vcxproj
+++ b/3_Solution/Bomber/Backend/Backend.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClInclude Include="CClientException.h" />
     <ClInclude Include="CException.h" />
+    <ClInclude Include="CMiscException.h" />
     <ClInclude Include="CServerException.h" />
     <ClInclude Include="CUser.h" />
     <ClInclude Include="Exceptions.h" />
@@ -133,6 +134,7 @@
   <ItemGroup>
     <ClCompile Include="CClientException.cpp" />
     <ClCompile Include="CException.cpp" />
+    <ClCompile Include="CMiscException.cpp" />
     <ClCompile Include="CServerException.cpp" />
     <ClCompile Include="CUser.cpp" />
   </ItemGroup>
