--- a/3_Solution/Bomber/Backend/Backend.vcxproj.filters
+++ b/3_Solution/Bomber/Backend/Backend.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="CMiscException.h">
       <Filter>Header Files\Exceptions</Filter>
     </ClInclude>
+    <ClInclude Include="CGenerator.h">
+      <Filter>Header Files\Utilities</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CException.cpp">
@@ -73,6 +76,9 @@
     </ClCompile>
     <ClCompile Include="CMiscException.cpp">
       <Filter>Source Files\Exceptions</Filter>
+    </ClCompile>
+    <ClCompile Include="CGenerator.cpp">
+      <Filter>Source Files\Utilities</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
