Big add-on. MySQL functionalities + Beginning of the Network Part.

--- a/3_Solution/Bomber/Backend/Backend.vcxproj.filters
+++ b/3_Solution/Bomber/Backend/Backend.vcxproj.filters
@@ -22,9 +22,6 @@
     <Filter Include="Header Files\Exceptions">
       <UniqueIdentifier>{05eae0ea-9a8e-4a5d-b51c-328151f84a96}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Users">
-      <UniqueIdentifier>{9cd78fb7-8646-4998-b0ee-3a8c0ad008ba}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Users">
       <UniqueIdentifier>{324229df-8055-4e0a-b990-a7d1f0404109}</UniqueIdentifier>
     </Filter>
@@ -33,6 +30,15 @@
     </Filter>
     <Filter Include="Source Files\Utilities">
       <UniqueIdentifier>{fcb6431a-e924-4fde-8472-beeffb794898}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Users">
+      <UniqueIdentifier>{9cd78fb7-8646-4998-b0ee-3a8c0ad008ba}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Network">
+      <UniqueIdentifier>{9245fbae-3b8e-4393-8378-c85d00dce35d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Network">
+      <UniqueIdentifier>{b7cb066d-d401-4064-b8b7-0e6cd2ccf8bb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +69,30 @@
     <ClInclude Include="CLogFile.h">
       <Filter>Header Files\Utilities</Filter>
     </ClInclude>
+    <ClInclude Include="CLogger.h">
+      <Filter>Header Files\Utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="CUtils.h">
+      <Filter>Header Files\Utilities</Filter>
+    </ClInclude>
+    <ClInclude Include="Config.h">
+      <Filter>Header Files\Configuration</Filter>
+    </ClInclude>
+    <ClInclude Include="CSocketPacket.h">
+      <Filter>Header Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="CRequest.h">
+      <Filter>Header Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="CResponse.h">
+      <Filter>Header Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="CProtocol.h">
+      <Filter>Header Files\Network</Filter>
+    </ClInclude>
+    <ClInclude Include="CConnection.h">
+      <Filter>Header Files\Network</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CException.cpp">
@@ -85,6 +115,24 @@
     </ClCompile>
     <ClCompile Include="CLogFile.cpp">
       <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
+    <ClCompile Include="CLogger.cpp">
+      <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
+    <ClCompile Include="CUtils.cpp">
+      <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
+    <ClCompile Include="CSocketPacket.cpp">
+      <Filter>Source Files\Network</Filter>
+    </ClCompile>
+    <ClCompile Include="CRequest.cpp">
+      <Filter>Source Files\Network</Filter>
+    </ClCompile>
+    <ClCompile Include="CResponse.cpp">
+      <Filter>Source Files\Network</Filter>
+    </ClCompile>
+    <ClCompile Include="CProtocol.cpp">
+      <Filter>Source Files\Network</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
