--- a/3_Solution/Bomber/Backend/Backend.vcxproj
+++ b/3_Solution/Bomber/Backend/Backend.vcxproj
@@ -76,6 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -87,9 +88,14 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <PreprocessorDefinitions>_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>C:\Program Files\MySQL\Connector C++ 8.0\include;C:\Program Files\MySQL\MySQL Server 8.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <AdditionalLibraryDirectories>C:\Program Files\MySQL\Connector C++ 8.0\lib64;C:\Program Files\MySQL\MySQL Server 8.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>C:\Program Files\MySQL\Connector C++ 8.0\lib64\vs14\mysqlcppconn.lib;C:\Program Files\MySQL\MySQL Server 8.0\lib\libmysql.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -115,21 +121,34 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <PreprocessorDefinitions>_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>C:\Program Files\MySQL\Connector C++ 8.0\include;C:\Program Files\MySQL\MySQL Server 8.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>C:\Program Files\MySQL\Connector C++ 8.0\lib64;C:\Program Files\MySQL\MySQL Server 8.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>C:\Program Files\MySQL\Connector C++ 8.0\lib64\vs14\mysqlcppconn.lib;C:\Program Files\MySQL\MySQL Server 8.0\lib\libmysql.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CClientException.h" />
+    <ClInclude Include="CConnection.h" />
     <ClInclude Include="CException.h" />
     <ClInclude Include="CGenerator.h" />
     <ClInclude Include="CLogFile.h" />
+    <ClInclude Include="CLogger.h" />
     <ClInclude Include="CMiscException.h" />
+    <ClInclude Include="Config.h" />
+    <ClInclude Include="CProtocol.h" />
+    <ClInclude Include="CRequest.h" />
+    <ClInclude Include="CResponse.h" />
     <ClInclude Include="CServerException.h" />
+    <ClInclude Include="CSocketPacket.h" />
     <ClInclude Include="CUser.h" />
+    <ClInclude Include="CUtils.h" />
     <ClInclude Include="Exceptions.h" />
     <ClInclude Include="IException.h" />
   </ItemGroup>
@@ -138,9 +157,15 @@
     <ClCompile Include="CException.cpp" />
     <ClCompile Include="CGenerator.cpp" />
     <ClCompile Include="CLogFile.cpp" />
+    <ClCompile Include="CLogger.cpp" />
     <ClCompile Include="CMiscException.cpp" />
+    <ClCompile Include="CProtocol.cpp" />
+    <ClCompile Include="CRequest.cpp" />
+    <ClCompile Include="CResponse.cpp" />
     <ClCompile Include="CServerException.cpp" />
+    <ClCompile Include="CSocketPacket.cpp" />
     <ClCompile Include="CUser.cpp" />
+    <ClCompile Include="CUtils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
