Almost finished the network connection part.

--- a/3_Solution/Bomber/Backend/Backend.vcxproj
+++ b/3_Solution/Bomber/Backend/Backend.vcxproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <ClInclude Include="CClientException.h" />
     <ClInclude Include="CConnection.h" />
+    <ClInclude Include="CEnumConverter.h" />
     <ClInclude Include="CException.h" />
     <ClInclude Include="CGenerator.h" />
     <ClInclude Include="CLogFile.h" />
