--- a/3_Solution/Bomber/Back_End/Back_End.vcxproj.filters
+++ b/3_Solution/Bomber/Back_End/Back_End.vcxproj.filters
@@ -117,11 +117,26 @@
     <ClInclude Include="CUser.h">
       <Filter>Header Files\User</Filter>
     </ClInclude>
+    <ClInclude Include="Utilities.h">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
+    <ClInclude Include="NonCopyable.h">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerControllerType.h">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Box.h">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GameObject.cpp">
-      <Filter>Source Files\Utilities-Game</Filter>
-    </ClCompile>
     <ClCompile Include="Timer.cpp">
       <Filter>Source Files\Utilities-Game</Filter>
     </ClCompile>
@@ -163,6 +178,21 @@
     </ClCompile>
     <ClCompile Include="CUtils.cpp">
       <Filter>Source Files\Utilities</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Source Files\Utilities-Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Utilities.cpp">
+      <Filter>Source Files\Utilities-Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Source Files\Utilities-Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Source Files\Utilities-Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Box.cpp">
+      <Filter>Source Files\Utilities-Game</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
