--- a/3_Solution/Bomber/Back_End/Back_End.vcxproj.filters
+++ b/3_Solution/Bomber/Back_End/Back_End.vcxproj.filters
@@ -135,6 +135,18 @@
     <ClInclude Include="Box.h">
       <Filter>Header Files\Utilities-Game</Filter>
     </ClInclude>
+    <ClInclude Include="Packet.hpp">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
+    <ClInclude Include="ServerMessageType.h">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
+    <ClInclude Include="ServerMessages.h">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Resources.h">
+      <Filter>Header Files\Utilities-Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Timer.cpp">
@@ -194,5 +206,14 @@
     <ClCompile Include="Box.cpp">
       <Filter>Source Files\Utilities-Game</Filter>
     </ClCompile>
+    <ClCompile Include="Packet.cpp">
+      <Filter>Source Files\Utilities-Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Resources.cpp">
+      <Filter>Source Files\Utilities-Game</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
