--- a/3_Solution/Bomber/Backend/Backend.vcxproj
+++ b/3_Solution/Bomber/Backend/Backend.vcxproj
@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CException.cpp" />
+    <ClCompile Include="TCPServerMaybe.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
